# snake-showdown

./: .dockerignore  .env.example  .env.production.example  .gitignore  AGENTS.md  API_ARCHITECTURE.md  Dockerfile  Makefile.render  README.md  docker-compose.yml  entrypoint.sh  nginx.conf  nginx.conf.template  openapi-spec.yaml  package-lock.json  package.json  render.yaml  supervisord.conf
.github/: RENDER_DEPLOY_SETUP.md
.github/workflows/: render-deploy.yml
backend/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  REFACTORING.md  entrypoint.sh  main.py  pyproject.toml
backend/app/: __init__.py  auth.py  config.py  database.py  db_models.py  init_db.py  main.py  models.py
backend/app/routes/: auth.py  game.py  player.py
backend/app/services/: auth_service.py  game_service.py  player_service.py
backend/tests/: conftest.py  test_auth.py  test_game.py  test_main.py  test_player.py
backend/tests_integration/: conftest.py  test_api_integration.py  test_auth_service_integration.py  test_database_integration.py  test_game_service_integration.py  test_player_service_integration.py
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts
frontend/src/components/: GameInstructions.test.tsx  SnakeGame.test.tsx  (+1 more)
src/: App.tsx  index.css
src/components/: GameCanvas.tsx  GameInstructions.tsx  SnakeGame.test.tsx
src/hooks/: useSnakeGame.test.ts
src/pages/: Game.test.tsx  Game.tsx  Spectate.tsx
src/services/: mockBackend.ts
src/test/: setup.ts  vitest.d.ts
(+11 files in other folders)
